--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.6",
+    "@solana/wallet-adapter-phantom": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-phantom": "^0.9.23",
     "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.93.3",
     "@tanstack/react-query": "^5.64.1",
@@ -38,6 +38,8 @@
     "@types/node": "^20.14.9",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.7.0",
@@ -45,6 +47,7 @@
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^17.3.0",
     "jsdom": "^24.1.3",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
